backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rentalcar-backend
  namespace: rentalcar
  labels:
    app: rentalcar-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rentalcar-backend
  template:
    metadata:
      labels:
        app: rentalcar-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: backend
          image: phucanhptit/rentalcar-be:latest
          ports:
            - containerPort: 8081  # Backend service
---
apiVersion: v1
kind: Service
metadata:
  name: rentalcar-backend
  namespace: rentalcar
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8081"  # This should point to the Prometheus exporter's port
spec:
  selector:
    app: rentalcar-backend
  ports:
    - name: backend-port  # Name for the backend service port
      protocol: TCP
      port: 8081          # Service port for the backend
      targetPort: 8081    # Port on the container for the backend
      nodePort: 30004     # Optional NodePort for the backend   # Optional NodePort for the exporter
  type: NodePort
