consul.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: rentalcar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: hashicorp/consul:latest
          ports:
            - containerPort: 8500
          command: ["consul", "agent", "-dev", "-client=0.0.0.0"]
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: rentalcar
spec:
  ports:
    - port: 8500
      targetPort: 8500
  selector:
    app: consul
