filestorageservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filestorageservice
  namespace: rentalcar
  labels:
    app: filestorageservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filestorageservice
  template:
    metadata:
      labels:
        app: filestorageservice
    spec:
      containers:
        - name: filestorageservice
          image: phucanhptit/filestorageservice:latest
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: file-storage
              mountPath: /storage/uploads
      volumes:
        - name: file-storage
          emptyDir: {}  # Replace with persistent storage in production

---
apiVersion: v1
kind: Service
metadata:
  name: filestorageservice
  namespace: rentalcar
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8082"
    prometheus.io/path: "/actuator/prometheus"
spec:
  selector:
    app: filestorageservice
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30006
  type: NodePort
