frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rentalcar-frontend
  labels:
    app: rentalcar-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rentalcar-frontend
  template:
    metadata:
      labels:
        app: rentalcar-frontend
    spec:
      containers:
        - name: frontend
          image: phucanhptit/fe-rentalcarangular:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rentalcar-frontend
spec:
  selector:
    app: rentalcar-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
  type: ClusterIP
