postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: rentalcar
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16  # You can change the version as needed
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
        - name: sidecar-metrics
          image: prom/node-exporter:latest
          ports:
            - containerPort: 9100
      volumes:
        - name: postgres-storage
          emptyDir: {}  # Replace with persistent storage in production

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: rentalcar
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      name: postgres
      port: 5432
      targetPort: 5432
    - protocol: TCP
      name: sidecar-metrics
      port: 9100
      targetPort: 9100
  type: ClusterIP
