ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rentalcar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rentacar.dapaisme.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rentalcar-backend
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rentalcar-frontend
                port:
                  number: 80
